Move bot to module